# cpp-cross-template

./: .gitignore  CMakeLists.txt  README.md  flake.nix
nix/: config-app.nix  config-vm.nix  overlay.nix  package.nix  service.nix
src/: main.cpp
